styles.css
* {
  box-sizing: border-box;
}

html, body {
  margin: 0 auto;
  padding: 0;
  height: 100%;
  font-family: Helvetica, Arial, sans-serif; 
}

/* nav bar styles */ 
.brand-title {
   font-size: 2rem;
   margin: 1.5rem;
}


.nav_bar {
    width: 100%;
    display: flex;
    position: relative;
    justify-content: space-between;
    align-items: flex-start;
    color: green;
    grid-column-start: 1;
    grid-column-end: 7;
    grid-row: 0;
    background-image: url();
  }

.nav_bar_links {
    height: 100%;
    padding-top: 0.5rem;
  }

.nav_bar_links ul {
  display: flex;
  margin: 0; 
  padding: 0;
}

.nav_bar_links li {
    list-style: none;
  }
  
.nav_bar_links li a {
    display: block;
    color:green;
    padding: 1.5rem;
    text-decoration: none;
    display: block;
    font-size: 1.5rem;
  }
  
.nav_bar_links li a:hover {
    color: black;
  }

.nav_bar_links .li_a_on_page {
  display: block;
  color:black;
  text-decoration: none;
}


.toggle-button {
  position: absolute;
  top: 2rem;
  right: 1rem;
  display: none;
  flex-direction: column;
  justify-content: space-between;
  width: 30px;
  height: 21px;
}

.toggle-button .bar {
  height: 3px;
  width: 100%;
  background-color: green;
  border-radius: 10px;
}


@media (max-width: 1150px) {
  .nav_bar {
      flex-direction: column;
      align-items: flex-start;
  }

  .toggle-button {
      display: flex;
  }

  .nav_bar_links {
      display: none;
      width: 100%;
      background-color: white;
  }

  .nav_bar_links ul {
      width: 100%;
      flex-direction: column;
  }

  .nav_bar_links ul li {
      text-align: center;
      border: 0.5px solid lightgray;
  }

  .nav_bar_links ul .li_a_on_page {
    text-align: center;
    padding: .5rem 1rem;
  }

  .nav_bar_links ul li a {
      padding: .5rem 1rem;
  }

  .nav_bar_links.active {
      display: flex;
  }
}



/* footer */ 
.footer_grid{
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  padding: 40px 40px;
  width: 100%;
  background-color: gray;
  color: white;
}

.footer_contact_div{
  grid-column: 6;
}

.footer_link {
  float: left;
  font-family:  Helvetica, Arial, sans-serif; 
  display: block;
  color:white;
  text-align: center;
  padding: 5% 5%;
  text-decoration: none;
  font-size: 150%;
  border: 3px solid white;
}

.footer_link:hover {
  color: black;
  border: 3px solid black;
}

/* index.html styles */ 

.main_page_large_picture_grid {
  background-image: url(img/woman_soccer_field.jpg);
  background-position: 25% 61%; 
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  height: 75%;
  z-index: -1;
  text-align: center;
  margin-bottom: 0.5%;
  display:grid;
  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: repeat(6, 1fr);
  padding: 0 40px;
  grid-template-areas: ". content content content content .";
}

.over_image_text {
  grid-area: content;
  grid-row: 2;
  color: green;  
  font-size: 400%;
}

.about_preview_grid {
  display:grid;
  grid-template-columns: repeat(6, 1fr);
  grid-template-areas: ". txt txt img img .";
  font-family:  Helvetica, Arial, sans-serif; 
  text-align: center;
  margin-top: 2%;
  margin-bottom: 2%;
  align-items: center;
  grid-column-gap: 3%;
}

.about_preview_text {
  grid-area: txt;
  font-size: 115%;
  text-align: left;
}

.about_preview_img {
  grid-area: img;
}

.main_page_about_me_img {
  margin-top: 2%;
  margin-bottom: 2%;
  width: 70%;
  height: auto;
}

.subtitle_main_page_about {
  color: green;
  font-size: 200%;
}

.my_journey_link {
  font-family:  Helvetica, Arial, sans-serif; 
  display: block;
  color:white;
  background-color: green;
  text-align: center;
  padding: 4% 4%;
  text-decoration: none;
  font-size: 150%;
}

.my_journey_link:hover {
  background-color: darkgreen;
}

.pricing_grid {
    background-color: #f4f4f4;
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    grid-template-areas: ". column1 column1 column2 column2 column3 .";
    padding-top: 2%;
}

.sessions_column {
  grid-area: column1;
  text-align: left;
}

.availiable_for_column {
  grid-area: column2;
  text-align: left;
  padding-left: 20%;
}

.price_schedule_button_column {
 grid-area: column3;
 text-align: left;
 padding-top: 20%;
 padding-bottom: 20%;
}


.pricing_row_title {
  font-family:  Helvetica, Arial, sans-serif; 
  font-size: 225%;
  color: green;
}

.pricing_row_bullet {
  font-family:  Helvetica, Arial, sans-serif; 
  font-size: 150%;
  color: black;
}

.pricing_link {
  width:100%;
  text-align: center;
  display: block;
  color:green;
  padding: 4% 4%;
  text-decoration: none;
  font-family:  Helvetica, Arial, sans-serif; 
  font-size: 150%;
  border: 3px solid green;
}

.pricing_link:hover {
  color: black;
  border: 3px solid black;
}

@media (max-width: 1350px) {
  .main_page_large_picture_grid {
    grid-template-columns: 1fr;
    grid-template-areas: content;
  }

  .about_preview_grid {
    margin-top: 10%;
    grid-template-columns: 1fr;
    grid-template-areas: "txt" "img";
    grid-row-gap: 5%;
  }

  .about_preview_text {
    text-align: center;
  }

  .pricing_grid {
    margin-top: 10%;
    grid-template-columns: 1fr;
    grid-template-areas: "column1" "column2" "column3";
    justify-items: center;
    align-items: center;
  }

  .sessions_column ul {
    text-align: left;
    width: 70%;
    position:relative;
    left: 10%;
  }

  .sessions_column {
    margin-top: 20%;
  }

  .availiable_for_column {
    padding-left: 0%;
    padding-top: 10%;
  }

  .availiable_for_column ul {
    text-align: left;
    width: 70%;
    position:relative;
    left: 10%;
  }

  .pricing_row_title {
    text-align: center;
  }

  .pricing_row_bullet {
    text-align: left;
    position:relative;
    left: 10%;
  }

  .pricing_link {
    margin: 2%;
  }

  .footer_grid {
    grid-template-columns: 1fr;
  }

}

/* About me page styles */ 
.about_intro_grid {
  display: grid;
  background-color: #f4f4f4;
  grid-template-columns: repeat(2, 1fr);
  grid-template-areas: "column1 column2";
  justify-items: center;
  align-items: center;
}

.about_qualifications {
  grid-area: column2;
  text-align: left;
  padding-top: 3%;
  padding-bottom: 3%;
  font-size: 120%;
  font-family:  Helvetica, Arial, sans-serif; 
}

.about_me_img_cell {
  grid-area: column1;
  align-items: center;
}

.about_me_img {
  width: 150%;
  height:auto;
}

.about_session {
  padding-left: 5%;
  padding-right: 5%;
  padding-top: 4%;
  padding-bottom: 4%;
  background-color:#f4f4f4; 
  color: black;
  font-family:  Helvetica, Arial, sans-serif; 
  font-size: 125%;
}

.about_text { 
  background-color: white;
  font-size: 125%;
  padding-left: 5%;
  padding-right: 5%;
  padding-top: 2%;
  padding-bottom: 2%;
  font-family:  Helvetica, Arial, sans-serif; 
}

@media (max-width: 1350px) {
  .about_intro_grid {
    background-color: #f4f4f4;
    grid-template-columns: 1fr;
    grid-template-areas: "column1" "column2";
    justify-items: center;
    align-items: center;
  }

  .about_me_img_cell {
    padding-top: 3%;
    width:100%;
    grid-area: column1;
    float: center;
  }

  .about_me_img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
    height: auto;
  }

  .about_qualifications {
    grid-area: column2;
    text-align: center;
    padding-top: 3%;
    padding-bottom: 3%;
    font-size: 120%;
    font-family:  Helvetica, Arial, sans-serif; 
  }
}



/* pricing */

.pricing {
  font-family:  Helvetica, Arial, sans-serif; 
  margin-top: 1%;
  padding-bottom: 5%;
  padding-top: 2%;
  text-align: center;
  background-color: #EAEAEA;
}

.pricing_title {
  font-size: 175%;
  color: green;
}

.green_text {
  color: green;
}

.pricing_detail {
  font-size: 110%;
}

.initial_meeting {
  padding: 2%;
  background-color: white;
  grid-area: column1;
  justify-self: right;
}

.individual {
  padding: 2%;
  background-color: white;
  grid-area: column2;
}

.group {
  padding: 2%;
  background-color: white;
  grid-area: column3;
  justify-self: left;
}

.fine_print {
  float:center;
  font-size: 100%;
}

.pricing_row {
  margin-top: 2%;
  margin-left: 5%;
  margin-right: 5%;
  font-size: 125%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-areas: "column1 column2 column3";
  justify-items: center;
  font-family:  Helvetica, Arial, sans-serif; 
  align-items: stretch;
} 

.book_now_div {
  margin-top: 3%;
}

.book_now_link {
  color:white;
  background-color: green;
  text-align: center;
  padding: 1% 1%;
  text-decoration: none;
  font-family: Helvetica, Arial, sans-serif; 
  font-size: 200%;
  width: 20%;
}

.book_now_link:hover {
  background-color: darkgreen;
}

@media (max-width: 1350px) {

  .pricing_row {
    margin-left: 5%;
    margin-right: 5%;
    font-size: 125%;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-areas: "column1" "column2" "column3";
    justify-content: center;
    font-family:  Helvetica, Arial, sans-serif; 
  } 

  .initial_meeting {
    padding: 2%;
    background-color: white;
    grid-area: column1;
    justify-self: center;
    margin-top: 2%;
  }
  
  .individual {
    padding: 2%;
    margin-top: 3%;
    background-color: white;
    grid-area: column2;
  }
  
  .group {
    padding: 2%;
    margin-top: 3%;
    background-color: white;
    grid-area: column3;
    justify-self: center;
  }
  

}

